[package]
name = "rustwasm-hello-world"
version = "0.1.0"
authors = ["Brandon Lucia <blucia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
lazy_static = "1.2.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
js-sys = "0.3.27"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
